[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/level_env.tres" type="Environment" id=1]
[ext_resource path="res://Assets/Models/Tiles_simplified.tres" type="MeshLibrary" id=2]
[ext_resource path="res://Assets/Objects/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/Objects/shadow.png" type="Texture" id=6]
[ext_resource path="res://Addons/decalco/src/DecalGLES2.shader" type="Shader" id=7]
[ext_resource path="res://Assets/Objects/ShadowBillboard.gd" type="Script" id=8]
[ext_resource path="res://Assets/UI/circle.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/UI.gd" type="Script" id=10]
[ext_resource path="res://Assets/UI/mini-wakuwaku.otf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/Objects/Ball_v2.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/UI/WinFont.tres" type="DynamicFont" id=13]
[ext_resource path="res://Assets/Objects/Ball_Predictor.gd" type="Script" id=14]
[ext_resource path="res://Assets/Models/Test_level.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[sub_resource type="MultiMesh" id=6]
transform_format = 1
instance_count = 50
mesh = SubResource( 5 )
transform_array = PoolVector3Array( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 7 )
shader_param/albedo_tint = Color( 1, 1, 1, 1 )
shader_param/emission_tint = Color( 0, 0, 0, 1 )
shader_param/emission_strength = 1.0
shader_param/occlusion_strength = 1.0
shader_param/specular_strength = 1.0
shader_param/metallic_strength = 1.0
shader_param/current_frame = 0
shader_param/flipbook_columns_count = 1
shader_param/current_frame_blend = 0.0
shader_param/use_normal_map = false
shader_param/albedo = ExtResource( 6 )

[sub_resource type="QuadMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.498039 )
albedo_texture = ExtResource( 6 )

[sub_resource type="SphereShape" id=11]
radius = 0.5

[sub_resource type="BoxShape" id=12]

[node name="Level" type="Spatial"]
script = ExtResource( 4 )

[node name="Test_level" parent="." instance=ExtResource( 15 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.79217e-06, 0.5, -41 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.222717
margin_bottom = -0.222717
theme = SubResource( 2 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UITween" type="Tween" parent="UI"]

[node name="Panel" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -306.0
margin_top = -121.0
margin_right = 305.0

[node name="Angle" type="Label" parent="UI/Panel"]
margin_left = 14.1581
margin_top = 9.43875
margin_right = 148.158
margin_bottom = 58.4388
text = "Shot Angle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spin" type="TextureRect" parent="UI/Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 167.528
margin_top = -110.0
margin_right = 267.528
margin_bottom = -10.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinCursor" type="TextureRect" parent="UI/Panel/Spin"]
self_modulate = Color( 0.505882, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = 6.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitPowerBar" type="ProgressBar" parent="UI/Panel"]
margin_left = 583.013
margin_top = 111.0
margin_right = 683.013
margin_bottom = 126.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 20.0
step = 1.0
value = 4.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="UI"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.35
margin_top = 390.0
margin_bottom = 871.0
custom_fonts/font = ExtResource( 13 )
text = "You win!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="UI"]
margin_left = 5.0
margin_top = 5.0
margin_right = 422.0
margin_bottom = 249.0
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 2, 1, 2 )
collision_layer = 3
collision_mask = 3
data = {
"cells": PoolIntArray( 0, 0, 1048576, 1, 0, 1048576, 2, 0, 1048576, 3, 0, 0, 65532, 0, 1048576, 65533, 0, 1048576, 65534, 0, 1048576, 65535, 0, 1048576, 0, 1, 1048576, 1, 1, 1048576, 2, 1, 1048576, 3, 1, 0, 65533, 1, 1048576, 65534, 1, 1048576, 65535, 1, 1048576, 131068, 1, 1048583, 0, 2, 1048576, 1, 2, 1048576, 2, 2, 1048576, 3, 2, 0, 65533, 2, 1048576, 65534, 2, 1048576, 65535, 2, 1048576, 131068, 2, 1048576, 0, 3, 1048576, 1, 3, 1048576, 2, 3, 1048576, 3, 3, 1048576, 65534, 3, 1048591, 65535, 3, 1048576, 131068, 3, 1048576, 131069, 3, 1048576, 131070, 3, 7, 0, 65532, 1048576, 1, 65532, 1048576, 2, 65532, 1048576, 3, 65532, 1048576, 65532, 65532, 1048576, 65533, 65532, 1048576, 65534, 65532, 1048576, 65535, 65532, 1048576, 0, 65533, 1048576, 1, 65533, 1048576, 2, 65533, 1048589, 3, 65533, 0, 65532, 65533, 1048576, 65533, 65533, 1048576, 65534, 65533, 1048576, 65535, 65533, 1048576, 0, 65534, 1048576, 1, 65534, 1048576, 2, 65534, 1048576, 3, 65534, 0, 65532, 65534, 1048576, 65533, 65534, 1048576, 65534, 65534, 1048576, 65535, 65534, 1048576, 0, 65535, 1048576, 1, 65535, 1048576, 2, 65535, 1048576, 3, 65535, 0, 65532, 65535, 1048576, 65533, 65535, 1048576, 65534, 65535, 1048576, 65535, 65535, 1048576 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Walls" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 2, 1, 2 )
collision_layer = 3
collision_mask = 3
data = {
"cells": PoolIntArray( 3, 0, 655369, 65532, 0, 9, 3, 1, 655369, 131068, 1, 12, 3, 2, 655369, 131068, 2, 9, 0, 3, 1048585, 1, 3, 1048585, 2, 3, 1048585, 3, 3, 655371, 65535, 3, 1048585, 131068, 3, 1048587, 131069, 3, 1048585, 131070, 3, 1048590, 0, 65532, 1441801, 1, 65532, 1441801, 2, 65532, 1441801, 3, 65532, 1441803, 65532, 65532, 11, 65533, 65532, 1441801, 65534, 65532, 1441801, 65535, 65532, 1441801, 3, 65533, 655369, 65532, 65533, 9, 1, 65534, 1048587, 3, 65534, 655369, 65532, 65534, 9, 3, 65535, 655369, 65532, 65535, 9 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Special" type="GridMap" parent="."]
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.642788, 0.541675, 0.541675, -6.18172e-08, -0.707107, 0.707107, 0.766044, -0.45452, -0.454519, 0, 7.26708, 0 )
visible = false

[node name="Shadows" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.26708, 0 )
visible = false
light_cull_mask = 4294967294
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_depth_range = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="Ball_old" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2.5, 7 )
visible = false

[node name="Ball" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2.5, 7 )

[node name="BallPredictor" parent="Ball" instance=ExtResource( 12 )]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 14 )

[node name="CameraAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 3, 7 )

[node name="Camera" type="Camera" parent="CameraAnchor"]
transform = Transform( -0.707107, -0.40558, 0.579228, 0, 0.819152, 0.573577, -0.707107, 0.40558, -0.579228, 143, 140, -143 )
cull_mask = 1048573
current = true
fov = 2.0
size = 10.0
near = 200.0
far = 500.0

[node name="MultiMeshInstance" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 6 )

[node name="BallAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 3, 7 )

[node name="Shadow" type="MeshInstance" parent="BallAnchor"]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, -0.990955, 0 )
visible = false
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="ShadowBillboard" type="MeshInstance" parent="BallAnchor"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.49, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )
script = ExtResource( 8 )

[node name="RayCastTR" type="RayCast" parent="BallAnchor/ShadowBillboard"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, 0.5, 0.5 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 2

[node name="RayCastTL" type="RayCast" parent="BallAnchor/ShadowBillboard"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -0.5, 0.5 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 2

[node name="RayCastBR" type="RayCast" parent="BallAnchor/ShadowBillboard"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, 0.5, 0.5 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 2

[node name="RayCastBL" type="RayCast" parent="BallAnchor/ShadowBillboard"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, -0.5, 0.5 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 2

[node name="Sensor" type="Area" parent="BallAnchor"]

[node name="CollisionShape" type="CollisionShape" parent="BallAnchor/Sensor"]
shape = SubResource( 11 )

[node name="Win" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -5 )
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="Win"]
shape = SubResource( 12 )

[connection signal="area_entered" from="BallAnchor/Sensor" to="." method="_on_Sensor_area_entered"]
